app/immich/base/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/component: &component server
spec:
  type: ClusterIP
  ports:
    - port: 2283
      name: http
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: immich
    app.kubernetes.io/instance: immich
    app.kubernetes.io/component: *component
---
apiVersion: v1
kind: Service
metadata:
  name: immich-ml
  labels:
    app.kubernetes.io/component: &component machine-learning
spec:
  type: ClusterIP
  ports:
    - port: 3003
      name: http
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: immich
    app.kubernetes.io/instance: immich
    app.kubernetes.io/component: *component
